<resources>
    <string name="app_name">CadastroDeCliente</string>
    <string name="listaDeClientes">Lista de Clientes</string>
    <string name="cadastrarCliente">Cadastrar Cliente</string>
    <string name="nomeDeUsuario">Nome de Usuário</string>
    <string name="nomeCompleto">Nome Completo</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="telefone">Telefone</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="addCliente" />
    <string name="lista_vazia">Lista Vazia...</string>
    <string name="titleMenu">Cadastro de Cliente</string>
    <string name="limpar">Limpar Campos</string>
    <string name="cancelar">Cancelar</string>
    <string name="autor">Matheus Gabriel 103971</string>
    <string name="remover">Remover</string>
    <string name="inserir_sucesso">Cliente inserido com sucesso!</string>
    <string name="inserir_erro">Erro ao tentar inserir cliente</string>
    <string name="alterar_sucesso">Cliente alterado!</string>
    <string name="alterar_erro">Erro ao alterar cliente ou cliente não existe!</string>
    <string name="remover_sucesso">Cliente removido!</string>
    <string name="remover_erro">Erro ao remover o cliente!</string>
    <string name="pesquisa_erro">Cliente não existe!</string>
    <string name="voltar">Voltar!</string>
    <string name="banco_erro">Não foi possivel conectar ao banco!</string>
    <string name="banco_sucesso">Banco conectado!</string>
    <string name="textCidade">Cidade</string>
    <string name="textApelido">Apelido</string>
    <string name="textEndereco">Endereço</string>
    <string name="textBairro">Bairro</string>
    <string name="textInfo">Informações do cliente</string>
    <string name="textAcessoCliente">Dados de acesso do cliente</string>
    <string name="textCod">Código do cliente</string>
    <string name="textAlterar">Alterar</string>
    <string name="textBuscar">Buscar</string>
    <string name="genCLiente">Gerenciar cliente</string>
</resources>